crates/tui/tests/storybook/snapshots/app_tool::workspace_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* enter_worktree native-worktree-support                                         14:37:03

* switch_cwd /repo/.worktrees/native-worktree-support                            14:37:03











─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
