crates/tui/tests/storybook/snapshots/app_tool::write_file_tool_block_error.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* write_file /root/forbidden.rs
  wrote 1 lines


─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
