crates/tui/tests/storybook/snapshots/app_tool::write_file_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 472
expression: frame.text()
---
* write_file src/greet.rs
  wrote 3 lines

* write_file src/pending.rs
  wrote 1 lines

* write_file src/greet.rs
  wrote 3 lines

* write_file /root/forbidden.rs
  permission denied: /root/forbidden.rs







─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
