crates/tui/tests/storybook/snapshots/app_tool::write_file_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* write_file src/greet.rs
   1   pub fn greet(name: &str) -> String {
   2       format!("hello, {name}")
   3   }

* write_file src/pending.rs                                          14:37:03
   1   pending

* write_file src/greet.rs                                            14:37:03
   1   pub fn greet(name: &str) -> String {
   2       format!("hello, {name}")
   3   }

* write_file /root/forbidden.rs                                      14:37:03
  permission denied: /root/forbidden.rs



─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
