crates/tui/tests/storybook/snapshots/app_tool::write_file_tool_states.expanded.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 473
expression: frame.styles_text()
---
dim: 78 22
  0   0   1 fg=AnsiValue(8)
  0   1  11 attrs=dim
  1   2   3 fg=AnsiValue(244)
  1   7   3 fg=Rgb { r: 249, g: 38, b: 114 }
  1  10   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  11   2 fg=Rgb { r: 102, g: 217, b: 239 }
  1  13   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  14   5 fg=Rgb { r: 166, g: 226, b: 46 }
  1  19   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  20   4 fg=Rgb { r: 253, g: 151, b: 31 }
  1  24   2 fg=Rgb { r: 248, g: 248, b: 242 }
  1  26   1 fg=Rgb { r: 249, g: 38, b: 114 }
  1  27   3 fg=Rgb { r: 102, g: 217, b: 239 }
  1  30  13 fg=Rgb { r: 248, g: 248, b: 242 }
  2   2   3 fg=AnsiValue(244)
  2   7  12 fg=Rgb { r: 248, g: 248, b: 242 }
  2  19   8 fg=Rgb { r: 230, g: 219, b: 116 }
  2  27   6 fg=Rgb { r: 190, g: 132, b: 255 }
  2  33   1 fg=Rgb { r: 230, g: 219, b: 116 }
  2  34   1 fg=Rgb { r: 248, g: 248, b: 242 }
  3   2   3 fg=AnsiValue(244)
  3   7   1 fg=Rgb { r: 248, g: 248, b: 242 }
  5   0   1 fg=AnsiValue(8)
  5   1  11 attrs=dim
  5  27   2 attrs=dim
  6   2   3 fg=AnsiValue(244)
  6   7   7 fg=Rgb { r: 248, g: 248, b: 242 }
  8   0   1 fg=AnsiValue(77)
  8   1  11 attrs=dim
  9   2   3 fg=AnsiValue(244)
  9   7   3 fg=Rgb { r: 249, g: 38, b: 114 }
  9  10   1 fg=Rgb { r: 248, g: 248, b: 242 }
  9  11   2 fg=Rgb { r: 102, g: 217, b: 239 }
  9  13   1 fg=Rgb { r: 248, g: 248, b: 242 }
  9  14   5 fg=Rgb { r: 166, g: 226, b: 46 }
  9  19   1 fg=Rgb { r: 248, g: 248, b: 242 }
  9  20   4 fg=Rgb { r: 253, g: 151, b: 31 }
  9  24   2 fg=Rgb { r: 248, g: 248, b: 242 }
  9  26   1 fg=Rgb { r: 249, g: 38, b: 114 }
  9  27   3 fg=Rgb { r: 102, g: 217, b: 239 }
  9  30  13 fg=Rgb { r: 248, g: 248, b: 242 }
 10   2   3 fg=AnsiValue(244)
 10   7  12 fg=Rgb { r: 248, g: 248, b: 242 }
 10  19   8 fg=Rgb { r: 230, g: 219, b: 116 }
 10  27   6 fg=Rgb { r: 190, g: 132, b: 255 }
 10  33   1 fg=Rgb { r: 230, g: 219, b: 116 }
 10  34   1 fg=Rgb { r: 248, g: 248, b: 242 }
 11   2   3 fg=AnsiValue(244)
 11   7   1 fg=Rgb { r: 248, g: 248, b: 242 }
 13   0   1 fg=AnsiValue(9)
 13   1  11 attrs=dim
 14   2  37 fg=AnsiValue(9)
 18   0   1 fg=AnsiValue(237)
 18   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 18   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 18  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 18  13  65 fg=AnsiValue(237)
 19   1   1 fg=Black bg=White
 20   0  78 fg=AnsiValue(237)
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  60 bg=AnsiValue(233)
 21  70   8 fg=AnsiValue(244) bg=AnsiValue(233)
