crates/tui/tests/storybook/snapshots/app_transcript_group::background_process_group_collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
background processes finished: 3, 1 failed: 4211 exited with code 1




  tip ctrl+enter / ctrl+q, steer the current response without waiting for…
────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────
 ○ normal                                                           1:1 100%
